--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-weather",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "get weather in your terminal",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/apizzimenti/weather-cli#readme",
   "devDependencies": {
+    "cli-color": "^1.1.0",
+    "public-ip": "^1.1.0"
+  },
+  "dependencies": {
     "cli-color": "^1.1.0",
     "public-ip": "^1.1.0"
   }
