--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-weather",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "get weather in your terminal",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +25,7 @@
     "cli-color": "^1.1.0",
     "cli-table": "^0.3.1",
     "minimist": "^1.2.0",
-    "public-ip": "^1.1.0"
+    "public-ip": "^1.1.0",
+    "update-notifier": "^0.6.0"
   }
 }
