--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-weather",
-  "version": "1.3.0",
+  "version": "1.3.3",
   "description": "get weather in your terminal",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,7 +24,9 @@
   "dependencies": {
     "cli-color": "^1.1.0",
     "cli-table": "^0.3.1",
+    "inpath": "^1.0.2",
     "minimist": "^1.2.0",
+    "pidof": "^1.0.2",
     "public-ip": "^1.1.0",
     "update-notifier": "^0.6.0"
   }
