--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: node_js
 node_js:
-  - "0.10"
+  - "4.1"
+  - "4.0"
   - "0.12"
-  - "1.8"
-  - "2.5"
-  - "3.3"
-  - "4.2"
-sudo: false
+  - "0.11"
+  - "0.10"
+  - "0.8"
+  - "0.6"
+  - "iojs"
+test: index.js
+sudo: required
+
+env: PACKAGE_VERSION="1.3.*"
