--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.73",
   "description": "get weather in your terminal",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test/test.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
   "homepage": "https://github.com/apizzimenti/cli-weather#readme",
   "devDependencies": {
     "cli-color": "^1.1.0",
-    "public-ip": "^1.1.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "public-ip": "^1.1.0"
   },
   "dependencies": {
     "cli-color": "^1.1.0",
