--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/apizzimenti/cli-weather#readme",
   "devDependencies": {
     "cli-color": "^1.1.0",
+    "jshint": "^2.9.1-rc2",
     "minimist": "^1.2.0",
     "public-ip": "^1.1.0"
   },
