--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "public-ip": "^1.1.0"
   },
   "dependencies": {
+    "chalk": "^1.1.1",
     "cli-color": "^1.1.0",
     "cli-table": "^0.3.1",
     "inpath": "^1.0.2",
