--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.3.74",
   "description": "get weather in your terminal",
   "scripts": {
-    "test": "node test/test-*.js && jshint index.js lib/*.js"
+    "test": "mocha && jshint index.js lib/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/apizzimenti/cli-weather.git"
+    "url": "https://github.com/apizzimenti/cli-weather.git"
   },
   "preferGlobal": true,
   "author": "Anthony Pizzimenti",
