--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-weather",
-  "version": "1.5.02",
+  "version": "1.5.03",
   "description": "get weather in your terminal",
   "scripts": {
     "test": "mocha && jshint index.js lib/*.js"
@@ -18,10 +18,7 @@
   "homepage": "https://github.com/apizzimenti/cli-weather#readme",
   "devDependencies": {
     "jshint": "^2.9.1-rc2",
-    "minimist": "^1.2.0",
-    "mocha": "^2.3.4",
-    "public-ip": "^1.1.0",
-    "update-notifier": "^0.6.0"
+    "mocha": "^2.3.4"
   },
   "dependencies": {
     "chalk": "^1.1.1",
@@ -31,6 +28,6 @@
     "mocha": "^2.3.4",
     "pidof": "^1.0.2",
     "public-ip": "^1.2.0",
-    "update-notifier": "^0.6.0"
+    "update-notifier": "^0.7.0"
   }
 }
