--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "author": "Anthony Pizzimenti",
   "license": "MIT",
   "bin": {
-    "weather": "index.js"
+    "weather": "dist/cli-weather.js"
   },
   "homepage": "https://github.com/apizzimenti/cli-weather#readme",
   "devDependencies": {
-    "jshint": "^2.9.1-rc2",
-    "mocha": "^2.3.4"
+    "grunt": "^1.0.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-tslint": "^3.1.0",
+    "mocha": "^2.3.4",
+    "tslint": "^3.9.0"
   },
   "dependencies": {
     "chalk": "^1.1.1",
