--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.09",
   "description": "get weather in your terminal",
   "scripts": {
-    "test": "mocha && jshint index.js lib/*.js"
+    "test": "mocha && jshint index.js src/*.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +32,6 @@
     "minimist": "^1.2.0",
     "mocha": "^2.3.4",
     "pidof": "^1.0.2",
-    "public-ip": "^1.2.0",
-    "update-notifier": "^0.7.0"
+    "public-ip": "^1.2.0"
   }
 }
