--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Anthony Pizzimenti",
   "license": "MIT",
   "bin": {
-    "weather": "index.js"
+    "weather": "build/index.js"
   },
   "homepage": "https://github.com/apizzimenti/cli-weather#readme",
   "devDependencies": {
@@ -26,12 +26,12 @@
     "tslint": "^3.9.0"
   },
   "dependencies": {
+    "axios": "^0.12.0",
     "chalk": "^1.1.1",
     "cli-table": "^0.3.1",
     "inpath": "^1.0.2",
     "minimist": "^1.2.0",
-    "mocha": "^2.3.4",
     "pidof": "^1.0.2",
-    "public-ip": "^1.2.0"
+    "request": "^2.72.0"
   }
 }
