--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "cli-table2": "^0.2.0",
+    "node-emoji": "^1.4.3",
     "request": "^2.79.0",
     "update-notifier": "^1.0.3",
     "wordwrap": "^1.0.0"
