--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "homepage": "https://github.com/apizzimenti/cli-weather#readme",
   "dependencies": {
     "chalk": "^1.1.3",
-    "cli-table2": "^0.2.0",
+    "cli-table": "^0.3.1",
     "node-emoji": "^1.4.3",
     "request": "^2.79.0",
     "update-notifier": "^1.0.3",
